# SNS

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose-test.yml  docker-compose.yml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/core/: config.py
backend/db/: session.py
backend/db/models/: base.py
backend/migrations/: env.py
backend/sns/: main.py
backend/sns/comments/: controller.py  model.py  repository.py  schema.py  service.py
backend/sns/comments/test/: conftest.py  test_controller.py  test_repository.py
backend/sns/common/: base.py  config.py  conftest.py  http_exceptions.py  path.py  session.py
backend/sns/email_templates/: new_account.html  reset_password.html
backend/sns/notification/: controller.py  enums.py  model.py  repository.py  schema.py  service.py
backend/sns/notification/test/: conftest.py  test_controller.py  test_repository.py
backend/sns/notifications/: controller.py  enums.py  model.py  repository.py  schema.py  service.py
backend/sns/notifications/test/: conftest.py  test_controller.py  test_repository.py
backend/sns/posts/: controller.py  model.py  repository.py  schema.py  service.py
backend/sns/posts/test/: conftest.py  test_controller.py  test_repository.py  test_service.py
backend/sns/users/: controller.py  enums.py  model.py  schema.py  service.py
backend/sns/users/email_templates/: new_account.html  reset_password.html
backend/sns/users/repositories/: db.py  email_client.py
backend/sns/users/test/: conftest.py  test_controller.py  test_repository.py  test_service.py  utils.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Followers.js  Followings.js  (+5 more)
(+9 files in other folders)
