[tool.poetry]
name = "sns"
version = "0.1.0"
description = ""
authors = ["jeha00 <rudtls0611@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
sqlalchemy = "^2.0.4"
pymysql = "^1.0.2"
uvicorn = "^0.20.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^1.10.5"}
emails = "^0.6"
jinja2 = "^3.1.2"
alembic = "^1.10.2"
add-trailing-comma = "^2.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"


[tool.pytest.ini_options]
markers = [
    "signup",
    "verify_email",
    "login",
    "reset_password",
    "change_password",
    "read_user",
    "update_user",
    "delete_user",
    "read_post",
    "read_posts",
    "create_post",
    "update_post",
    "delete_post",
    "read_likers",
    "read_likees",
    "like_post",
    "unlike_post",
    "get_comments_on_a_post",
    "get_comments_of_a_user",
    "create_comment",
    "update_comment",
    "delete_comment",
]


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
